Prepare DOMTree.NET Project for development

--- a/DOMTree.NET/DOMTree.NET/packages.config
+++ b/DOMTree.NET/DOMTree.NET/packages.config
@@ -4,4 +4,5 @@
   <package id="MvvmCross.Binding" version="5.4.2" targetFramework="net452" />
   <package id="MvvmCross.Core" version="5.4.2" targetFramework="net452" />
   <package id="MvvmCross.Platform" version="5.4.2" targetFramework="net452" />
+  <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="net452" />
 </packages>
