--- a/DOMTree.NET/DOMTree.NET/DOMTree.NET.csproj
+++ b/DOMTree.NET/DOMTree.NET/DOMTree.NET.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Infrastructure\MvxRegionAttribute.cs" />
     <Compile Include="Infrastructure\MvxWpfExtensionMethods.cs" />
     <Compile Include="Infrastructure\MvxWpfPage.cs" />
+    <Compile Include="Services\DocumentService.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="Views\Code\CodeView.xaml.cs">
       <DependentUpon>CodeView.xaml</DependentUpon>
@@ -156,6 +157,7 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
