Remove white spaces from CustomViewPresenter, and change Project Solution File

--- a/DOMTree.NET/DOMTree.NET.Core/DOMTree.NET.Core.csproj
+++ b/DOMTree.NET/DOMTree.NET.Core/DOMTree.NET.Core.csproj
@@ -60,7 +60,7 @@
     <Compile Include="AppStart.cs" />
     <Compile Include="Interfaces\IDocumentService.cs" />
     <Compile Include="Interfaces\IViewReportService.cs" />
-    <Compile Include="Models\CodeData.cs" />
+    <Compile Include="Models\Document.cs" />
     <Compile Include="Services\ViewReportService.cs" />
     <Compile Include="ViewModels\CodeViewModel.cs" />
     <Compile Include="ViewModels\DesignViewModel.cs" />
