--- a/DOMTree.NET/DOMTree.NET.Tests/DOMTree.NET.Tests.csproj
+++ b/DOMTree.NET/DOMTree.NET.Tests/DOMTree.NET.Tests.csproj
@@ -89,6 +89,12 @@
       <Name>DOMTree.NET</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="TestData\html.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
