--- a/DOMTree.NET/DOMTree.NET/DOMTree.NET.csproj
+++ b/DOMTree.NET/DOMTree.NET/DOMTree.NET.csproj
@@ -87,12 +87,18 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Controls\DOM\AttributeNode.cs" />
+    <Compile Include="Controls\DOM\Connection.cs" />
+    <Compile Include="Controls\DOM\MarkupNode.cs" />
+    <Compile Include="Controls\DOM\TextNode.cs" />
+    <Compile Include="Controls\DOM\Base\VisualNode.cs" />
     <Compile Include="Infrastructure\CustomViewPresenter.cs" />
     <Compile Include="Infrastructure\MvxMultiRegionWpfViewPresenter.cs" />
     <Compile Include="Infrastructure\MvxRegionAttribute.cs" />
     <Compile Include="Infrastructure\MvxWpfExtensionMethods.cs" />
     <Compile Include="Infrastructure\MvxWpfPage.cs" />
     <Compile Include="Services\DocumentService.cs" />
+    <Compile Include="Services\NodePackerService.cs" />
     <Compile Include="Setup.cs" />
     <Compile Include="Views\Code\CodeView.xaml.cs">
       <DependentUpon>CodeView.xaml</DependentUpon>
@@ -145,6 +151,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Themes\Generic.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\Code\CodeView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -157,7 +167,9 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Views\Node\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets" Condition="Exists('..\packages\Xamarin.Forms.2.3.4.247\build\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+Xamarin.iOS10+xamarinmac20\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
