Add custom Control 'DOMCanvas' to WPF solution for drawing DOM Tree and Add Scrollbar to CodeView

--- a/DOMTree.NET/DOMTree.NET/DOMTree.NET.csproj
+++ b/DOMTree.NET/DOMTree.NET/DOMTree.NET.csproj
@@ -87,6 +87,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Controls\DOMCanvas.cs" />
     <Compile Include="Controls\DOM\AttributeNode.cs" />
     <Compile Include="Controls\DOM\Connection.cs" />
     <Compile Include="Controls\DOM\MarkupNode.cs" />
