--- a/DOMTree.NET/DOMTree.NET.Core/packages.config
+++ b/DOMTree.NET/DOMTree.NET.Core/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HtmlAgilityPack" version="1.6.15" targetFramework="net452" />
   <package id="MvvmCross.Core" version="4.3.0" targetFramework="net452" />
   <package id="MvvmCross.Platform" version="4.3.0" targetFramework="net452" />
 </packages>
